<resources>
    <string name="app_name">MyPhotoOfTheDay</string>

    <!--    photo fragment-->
    <string name="text_wiki_hint">Найти в википедии</string>
    <string name="text_wiki_helper">Поищите в вики</string>
    <string name="chip_text_dayBeforeYesterday">Позавчера</string>
    <string name="chip_text_yesterday">Вчера</string>
    <string name="chip_text_today">Сегодня</string>
    <string name="bottom_sheet_choose_date_text">Выбрать дату просмотра фотографии дня</string>

    <!--    menu-->
    <string name="menu_photo_of_the_day">Фото дня</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_mars_rover_photos">Фото Марса</string>

    <!-- Preference Themes -->
    <string name="settings_themes_header">Themes</string>
    <string name="settings_themes_title">Выбранная тема</string>

    <!--   MarsPhotoFragment -->
    <string name="text_sol_hint">День с момента приземления на марс</string>
    <string name="text_sol_helper">Получите фотографии за выбранный день</string>
    <string name="mars_rover_curiosity">Curiosity rover</string>
    <string name="mars_rover_spirit">Spirit rover</string>
    <string name="mars_rover_opportunity">Opportunity rover</string>
    <string name="mars_btn_next_snack_text">Больше фотографий за данный сол нет</string>
    <string name="mars_btn_back_snack_text">Вы на первой странице</string>
    <string name="mars_tab_curiosity">Curiosity</string>
    <string name="mars_tab_opportunity">Opportunity</string>
    <string name="mars_tab_spirit">Spirit</string>
    <string name="menu_heresy">Ересь всякая</string>

</resources>