<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navPhotoOfTheDay"
        android:icon="@drawable/ic_nasa"
        android:title="@string/menu_photo_of_the_day"
        android:orderInCategory="0"/>

    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/menu_settings"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/navMarsRoverPhotos"
        android:icon="@drawable/ic_mars_rover"
        android:title="@string/menu_mars_rover_photos"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/navHeresy"
        android:icon="@drawable/ic_fire"
        android:title="@string/menu_heresy"
        android:orderInCategory="3"/>

</menu>